crates/koruma-derive/src/tests/snapshots/koruma_derive__tests__snapshot_tests__koruma_expansion_try_from_option_field.snap
---
source: crates/koruma-derive/src/tests/snapshot_tests/constructors.rs
expression: rendered
---
#[doc = concat!(
    "Validators for the `", "inner", "` field of [`", "OptionalWrapper", "`]: [`",
    "RequiredValidation", "`] (plus inner validation)."
)]
#[derive(Clone, Copy, Debug)]
#[allow(dead_code)]
pub enum OptionalWrapperInnerKorumaValidatorRef<'koruma> {
    RequiredValidation(&'koruma RequiredValidation<Option<InnerValue>>),
    Inner(&'koruma <InnerValue as ::koruma::ValidateExt>::Error),
}
#[doc = concat!(
    "Validation errors for the `", "inner", "` field of [`", "OptionalWrapper",
    "`].\n\nValidators: [`", "RequiredValidation", "`]."
)]
#[derive(Debug, Default)]
pub struct OptionalWrapperInnerKorumaValidationError {
    required_validation: Option<RequiredValidation<Option<InnerValue>>>,
    inner: Option<<InnerValue as ::koruma::ValidateExt>::Error>,
}
impl OptionalWrapperInnerKorumaValidationError {
    #[doc = concat!(
        "Returns the failed `", "RequiredValidation", "` validator, if any."
    )]
    pub fn required_validation(
        &self,
    ) -> Option<&RequiredValidation<Option<InnerValue>>> {
        self.required_validation.as_ref()
    }
    #[doc = concat!("Returns the inner validation error for `", "inner", "`, if any.")]
    pub fn inner(&self) -> Option<&<InnerValue as ::koruma::ValidateExt>::Error> {
        self.inner.as_ref()
    }
    #[doc = concat!(
        "Returns all failed validators for `", "inner",
        "` including inner newtype validation errors."
    )]
    pub fn all(
        &self,
    ) -> impl Iterator<Item = OptionalWrapperInnerKorumaValidatorRef<'_>> + '_ {
        [
            self
                .required_validation
                .as_ref()
                .map(OptionalWrapperInnerKorumaValidatorRef::RequiredValidation),
            self
                .inner
                .as_ref()
                .filter(|inner| !inner.is_empty())
                .map(OptionalWrapperInnerKorumaValidatorRef::Inner),
        ]
            .into_iter()
            .flatten()
    }
    pub fn is_empty(&self) -> bool {
        self.required_validation.is_none()
            && self.inner.as_ref().map_or(true, |inner| inner.is_empty())
    }
    pub fn has_errors(&self) -> bool {
        !self.is_empty()
    }
}
#[doc = concat!(
    "Validation errors for [`", "OptionalWrapper",
    "`].\n\nContains per-field error structs for ", "field: `inner`", "."
)]
#[derive(Debug, Default)]
pub struct OptionalWrapperKorumaValidationError {
    inner: OptionalWrapperInnerKorumaValidationError,
}
impl OptionalWrapperKorumaValidationError {
    #[doc = concat!(
        "Returns validation errors for the `", "inner", "` field of [`",
        "OptionalWrapper", "`]."
    )]
    pub fn inner(&self) -> &OptionalWrapperInnerKorumaValidationError {
        &self.inner
    }
}
impl core::ops::Deref for OptionalWrapperKorumaValidationError {
    type Target = OptionalWrapperInnerKorumaValidationError;
    fn deref(&self) -> &Self::Target {
        &self.inner
    }
}
impl ::koruma::ValidationError for OptionalWrapperKorumaValidationError {
    fn is_empty(&self) -> bool {
        self.inner.is_empty()
    }
}
impl ::koruma::ValidationIssues for OptionalWrapperKorumaValidationError {
    fn issues(&self) -> ::std::vec::Vec<::koruma::ValidationIssue> {
        let mut __koruma_issues = ::std::vec::Vec::new();
        if self.inner.required_validation().is_some() {
            __koruma_issues
                .push(
                    ::koruma::ValidationIssue::field(
                        "inner",
                        ::core::any::type_name::<
                            RequiredValidation<Option<InnerValue>>,
                        >(),
                        None,
                        ::std::format!(
                            "validation failed for `{}`", "RequiredValidation"
                        ),
                        ::std::vec::Vec::new(),
                    ),
                );
        }
        if self
            .inner
            .inner()
            .is_some_and(|__koruma_error| {
                !::koruma::ValidationError::is_empty(__koruma_error)
            })
        {
            __koruma_issues
                .push(
                    ::koruma::ValidationIssue::field(
                        "inner",
                        "newtype",
                        None,
                        ::std::format!("newtype validation failed for `{}`", "inner"),
                        ::std::vec::Vec::new(),
                    ),
                );
        }
        __koruma_issues
    }
}
impl OptionalWrapper {
    #[doc = concat!(
        "Validates all fields of `", "OptionalWrapper",
        "` and returns an error struct containing all validation failures."
    )]
    pub fn validate(&self) -> Result<(), OptionalWrapperKorumaValidationError> {
        let mut error = OptionalWrapperKorumaValidationError {
            inner: OptionalWrapperInnerKorumaValidationError {
                required_validation: None,
                inner: None,
            },
        };
        let mut has_error = false;
        {
            ::koruma::__private::assert_newtype_field_ready::<InnerValue>();
        }
        {
            let __koruma_builder = RequiredValidation::<
                Option<InnerValue>,
            >::__koruma_builder();
            ::koruma::__private::assert_field_validator_ready::<
                _,
                Option<InnerValue>,
                RequiredValidation<Option<InnerValue>>,
            >(&__koruma_builder);
            let validator = ::koruma::__private::BuildValidator::build_validator(
                ::koruma::__private::CaptureValueRef::capture_value_ref(
                    __koruma_builder,
                    &self.inner,
                ),
            );
            if !<RequiredValidation<
                Option<InnerValue>,
            > as ::koruma::Validate<
                Option<InnerValue>,
            >>::validate(&validator, &self.inner) {
                error.inner.required_validation = Some(validator);
                has_error = true;
            }
        }
        if let Some(ref __newtype_value) = self.inner {
            if let Err(newtype_err) = __newtype_value.validate() {
                error.inner.inner = Some(newtype_err);
                has_error = true;
            }
        }
        if has_error { Err(error) } else { Ok(()) }
    }
}
impl ::koruma::ValidateExt for OptionalWrapper {
    type Error = OptionalWrapperKorumaValidationError;
    fn validate(&self) -> Result<(), OptionalWrapperKorumaValidationError> {
        Self::validate(self)
    }
}
impl ::koruma::__private::KorumaWasDerived for OptionalWrapper {}
impl ::koruma::NewtypeValidation for OptionalWrapper {}
impl ::koruma::NewtypeValue for OptionalWrapper {
    type Inner = Option<InnerValue>;
    fn as_inner(&self) -> &Self::Inner {
        &self.inner
    }
    fn into_inner(self) -> Self::Inner
    where
        Self: Sized,
    {
        self.inner
    }
    fn validate_inner(
        __koruma_newtype_inner_value: &Self::Inner,
    ) -> Result<(), Self::Error> {
        let mut error = OptionalWrapperKorumaValidationError {
            inner: OptionalWrapperInnerKorumaValidationError {
                required_validation: None,
                inner: None,
            },
        };
        let mut has_error = false;
        {
            ::koruma::__private::assert_newtype_field_ready::<InnerValue>();
        }
        {
            let __koruma_builder = RequiredValidation::<
                Option<InnerValue>,
            >::__koruma_builder();
            ::koruma::__private::assert_field_validator_ready::<
                _,
                Option<InnerValue>,
                RequiredValidation<Option<InnerValue>>,
            >(&__koruma_builder);
            let validator = ::koruma::__private::BuildValidator::build_validator(
                ::koruma::__private::CaptureValueRef::capture_value_ref(
                    __koruma_builder,
                    &*__koruma_newtype_inner_value,
                ),
            );
            if !<RequiredValidation<
                Option<InnerValue>,
            > as ::koruma::Validate<
                Option<InnerValue>,
            >>::validate(&validator, &*__koruma_newtype_inner_value) {
                error.inner.required_validation = Some(validator);
                has_error = true;
            }
        }
        if let Some(ref __newtype_value) = *__koruma_newtype_inner_value {
            if let Err(newtype_err) = __newtype_value.validate() {
                error.inner.inner = Some(newtype_err);
                has_error = true;
            }
        }
        if has_error { Err(error) } else { Ok(()) }
    }
}
impl ::koruma::NewtypeTryFromInner for OptionalWrapper {
    fn try_from_inner(value: Self::Inner) -> Result<Self, Self::Error>
    where
        Self: Sized,
    {
        <Self as ::koruma::NewtypeValue>::validate_inner(&value)?;
        Ok(Self { inner: value })
    }
}
impl TryFrom<Option<InnerValue>> for OptionalWrapper {
    type Error = OptionalWrapperKorumaValidationError;
    fn try_from(value: Option<InnerValue>) -> Result<Self, Self::Error> {
        let instance = Self { inner: value };
        instance.validate()?;
        Ok(instance)
    }
}
