crates/koruma-derive/src/tests/snapshots/koruma_derive__tests__snapshot_tests__koruma_expansion_try_from_tuple_struct.snap
---
source: crates/koruma-derive/src/tests/snapshot_tests/constructors.rs
expression: rendered
---
#[doc = concat!(
    "Validators for the `", "_0", "` field of [`", "Email", "`]: [`",
    "NonEmptyStringValidation", "`]."
)]
#[derive(Clone, Copy, Debug)]
#[allow(dead_code)]
pub enum Email0KorumaValidatorRef<'koruma> {
    NonEmptyStringValidation(&'koruma NonEmptyStringValidation),
}
#[doc = concat!(
    "Validation errors for the `", "_0", "` field of [`", "Email",
    "`].\n\nValidators: [`", "NonEmptyStringValidation", "`]."
)]
#[derive(Debug, Default)]
pub struct Email0KorumaValidationError {
    non_empty_string_validation: Option<NonEmptyStringValidation>,
}
impl Email0KorumaValidationError {
    #[doc = concat!(
        "Returns the failed `", "NonEmptyStringValidation", "` validator, if any."
    )]
    pub fn non_empty_string_validation(&self) -> Option<&NonEmptyStringValidation> {
        self.non_empty_string_validation.as_ref()
    }
    #[doc = concat!("Returns all failed validators for `", "_0", "`.")]
    pub fn all(&self) -> impl Iterator<Item = Email0KorumaValidatorRef<'_>> + '_ {
        [
            self
                .non_empty_string_validation
                .as_ref()
                .map(Email0KorumaValidatorRef::NonEmptyStringValidation),
        ]
            .into_iter()
            .flatten()
    }
    pub fn is_empty(&self) -> bool {
        self.non_empty_string_validation.is_none()
    }
    pub fn has_errors(&self) -> bool {
        !self.is_empty()
    }
}
#[doc = concat!(
    "Validation errors for [`", "Email", "`].\n\nContains per-field error structs for ",
    "field: `_0`", "."
)]
#[derive(Debug, Default)]
pub struct EmailKorumaValidationError {
    _0: Email0KorumaValidationError,
}
impl EmailKorumaValidationError {
    #[doc = concat!(
        "Returns validation errors for the `", "_0", "` field of [`", "Email", "`]."
    )]
    pub fn _0(&self) -> &Email0KorumaValidationError {
        &self._0
    }
}
impl core::ops::Deref for EmailKorumaValidationError {
    type Target = Email0KorumaValidationError;
    fn deref(&self) -> &Self::Target {
        &self._0
    }
}
impl ::koruma::ValidationError for EmailKorumaValidationError {
    fn is_empty(&self) -> bool {
        self._0.is_empty()
    }
}
impl ::koruma::ValidationIssues for EmailKorumaValidationError {
    fn issues(&self) -> ::std::vec::Vec<::koruma::ValidationIssue> {
        let mut __koruma_issues = ::std::vec::Vec::new();
        if self._0.non_empty_string_validation().is_some() {
            __koruma_issues
                .push(
                    ::koruma::ValidationIssue::field(
                        "_0",
                        ::core::any::type_name::<NonEmptyStringValidation>(),
                        None,
                        ::std::format!(
                            "validation failed for `{}`", "NonEmptyStringValidation"
                        ),
                        ::std::vec::Vec::new(),
                    ),
                );
        }
        __koruma_issues
    }
}
impl Email {
    #[doc = concat!(
        "Validates all fields of `", "Email",
        "` and returns an error struct containing all validation failures."
    )]
    pub fn validate(&self) -> Result<(), EmailKorumaValidationError> {
        let mut error = EmailKorumaValidationError {
            _0: Email0KorumaValidationError {
                non_empty_string_validation: None,
            },
        };
        let mut has_error = false;
        let __field_value = &self.0;
        {
            let __koruma_builder = NonEmptyStringValidation::__koruma_builder();
            ::koruma::__private::assert_field_validator_ready::<
                _,
                String,
                NonEmptyStringValidation,
            >(&__koruma_builder);
            let validator = ::koruma::__private::BuildValidator::build_validator(
                ::koruma::__private::CaptureValueRef::capture_value_ref(
                    __koruma_builder,
                    __field_value,
                ),
            );
            if !<NonEmptyStringValidation as ::koruma::Validate<
                String,
            >>::validate(&validator, __field_value) {
                error._0.non_empty_string_validation = Some(validator);
                has_error = true;
            }
        }
        if has_error { Err(error) } else { Ok(()) }
    }
}
impl ::koruma::ValidateExt for Email {
    type Error = EmailKorumaValidationError;
    fn validate(&self) -> Result<(), EmailKorumaValidationError> {
        Self::validate(self)
    }
}
impl ::koruma::__private::KorumaWasDerived for Email {}
impl ::koruma::NewtypeValidation for Email {}
impl ::koruma::NewtypeValue for Email {
    type Inner = String;
    fn as_inner(&self) -> &Self::Inner {
        &self.0
    }
    fn into_inner(self) -> Self::Inner
    where
        Self: Sized,
    {
        self.0
    }
    fn validate_inner(
        __koruma_newtype_inner_value: &Self::Inner,
    ) -> Result<(), Self::Error> {
        let mut error = EmailKorumaValidationError {
            _0: Email0KorumaValidationError {
                non_empty_string_validation: None,
            },
        };
        let mut has_error = false;
        let __field_value = __koruma_newtype_inner_value;
        {
            let __koruma_builder = NonEmptyStringValidation::__koruma_builder();
            ::koruma::__private::assert_field_validator_ready::<
                _,
                String,
                NonEmptyStringValidation,
            >(&__koruma_builder);
            let validator = ::koruma::__private::BuildValidator::build_validator(
                ::koruma::__private::CaptureValueRef::capture_value_ref(
                    __koruma_builder,
                    __field_value,
                ),
            );
            if !<NonEmptyStringValidation as ::koruma::Validate<
                String,
            >>::validate(&validator, __field_value) {
                error._0.non_empty_string_validation = Some(validator);
                has_error = true;
            }
        }
        if has_error { Err(error) } else { Ok(()) }
    }
}
impl ::koruma::NewtypeTryFromInner for Email {
    fn try_from_inner(value: Self::Inner) -> Result<Self, Self::Error>
    where
        Self: Sized,
    {
        <Self as ::koruma::NewtypeValue>::validate_inner(&value)?;
        Ok(Self(value))
    }
}
impl TryFrom<String> for Email {
    type Error = EmailKorumaValidationError;
    fn try_from(value: String) -> Result<Self, Self::Error> {
        let instance = Self(value);
        instance.validate()?;
        Ok(instance)
    }
}
