crates/koruma-derive/src/tests/snapshots/koruma_derive__tests__snapshot_tests__koruma_expansion_try_new.snap
---
source: crates/koruma-derive/src/tests/snapshot_tests/constructors.rs
expression: pretty_print(expanded)
---
#[doc = concat!(
    "Validators for the `", "age", "` field of [`", "Person", "`]: [`",
    "RangeValidation", "`]."
)]
#[derive(Clone, Copy, Debug)]
#[allow(dead_code)]
pub enum PersonAgeKorumaValidatorRef<'koruma> {
    RangeValidation(&'koruma RangeValidation),
}
#[doc = concat!(
    "Validation errors for the `", "age", "` field of [`", "Person",
    "`].\n\nValidators: [`", "RangeValidation", "`]."
)]
#[derive(Debug, Default)]
pub struct PersonAgeKorumaValidationError {
    range_validation: Option<RangeValidation>,
}
impl PersonAgeKorumaValidationError {
    #[doc = concat!("Returns the failed `", "RangeValidation", "` validator, if any.")]
    pub fn range_validation(&self) -> Option<&RangeValidation> {
        self.range_validation.as_ref()
    }
    #[doc = concat!("Returns all failed validators for `", "age", "`.")]
    pub fn all(&self) -> impl Iterator<Item = PersonAgeKorumaValidatorRef<'_>> + '_ {
        [
            self
                .range_validation
                .as_ref()
                .map(PersonAgeKorumaValidatorRef::RangeValidation),
        ]
            .into_iter()
            .flatten()
    }
    pub fn is_empty(&self) -> bool {
        self.range_validation.is_none()
    }
    pub fn has_errors(&self) -> bool {
        !self.is_empty()
    }
}
#[doc = concat!(
    "Validation errors for [`", "Person", "`].\n\nContains per-field error structs for ",
    "field: `age`", "."
)]
#[derive(Debug, Default)]
pub struct PersonKorumaValidationError {
    age: PersonAgeKorumaValidationError,
}
impl PersonKorumaValidationError {
    #[doc = concat!(
        "Returns validation errors for the `", "age", "` field of [`", "Person", "`]."
    )]
    pub fn age(&self) -> &PersonAgeKorumaValidationError {
        &self.age
    }
}
impl ::koruma::ValidationError for PersonKorumaValidationError {
    fn is_empty(&self) -> bool {
        self.age.is_empty()
    }
}
impl ::koruma::ValidationIssues for PersonKorumaValidationError {
    fn issues(&self) -> ::std::vec::Vec<::koruma::ValidationIssue> {
        let mut __koruma_issues = ::std::vec::Vec::new();
        if self.age.range_validation().is_some() {
            __koruma_issues
                .push(
                    ::koruma::ValidationIssue::field(
                        "age",
                        ::core::any::type_name::<RangeValidation>(),
                        None,
                        ::std::format!("validation failed for `{}`", "RangeValidation"),
                        ::std::vec::Vec::new(),
                    ),
                );
        }
        __koruma_issues
    }
}
impl Person {
    #[doc = concat!(
        "Creates a new `", "Person",
        "` instance and validates it.\n\nReturns `Ok(instance)` if all validations pass, or `Err(error)` with the validation failures."
    )]
    pub fn try_new(age: i32, name: String) -> Result<Self, PersonKorumaValidationError> {
        let instance = Self { age, name };
        instance.validate()?;
        Ok(instance)
    }
    #[doc = concat!(
        "Validates all fields of `", "Person",
        "` and returns an error struct containing all validation failures."
    )]
    pub fn validate(&self) -> Result<(), PersonKorumaValidationError> {
        let mut error = PersonKorumaValidationError {
            age: PersonAgeKorumaValidationError {
                range_validation: None,
            },
        };
        let mut has_error = false;
        let __field_value = &self.age;
        {
            let __koruma_builder = RangeValidation::min(0).max(150);
            ::koruma::__private::assert_field_validator_ready::<
                _,
                i32,
                RangeValidation,
            >(&__koruma_builder);
            let validator = ::koruma::__private::BuildValidator::build_validator(
                ::koruma::__private::CaptureValueRef::capture_value_ref(
                    __koruma_builder,
                    __field_value,
                ),
            );
            if !<RangeValidation as ::koruma::Validate<
                i32,
            >>::validate(&validator, __field_value) {
                error.age.range_validation = Some(validator);
                has_error = true;
            }
        }
        if has_error { Err(error) } else { Ok(()) }
    }
}
impl ::koruma::ValidateExt for Person {
    type Error = PersonKorumaValidationError;
    fn validate(&self) -> Result<(), PersonKorumaValidationError> {
        Self::validate(self)
    }
}
impl ::koruma::__private::KorumaWasDerived for Person {}
