crates/koruma-derive/src/tests/snapshots/koruma_derive__tests__snapshot_tests__koruma_expansion_try_new_tuple_struct.snap
---
source: crates/koruma-derive/src/tests/snapshot_tests/constructors.rs
expression: rendered
---
#[doc = concat!(
    "Validators for the `", "_0", "` field of [`", "Username", "`]: [`",
    "NonEmptyStringValidation", "`]."
)]
#[derive(Clone, Copy, Debug)]
#[allow(dead_code)]
pub enum Username0KorumaValidatorRef<'koruma> {
    NonEmptyStringValidation(&'koruma NonEmptyStringValidation),
}
#[doc = concat!(
    "Validation errors for the `", "_0", "` field of [`", "Username",
    "`].\n\nValidators: [`", "NonEmptyStringValidation", "`]."
)]
#[derive(Debug, Default)]
pub struct Username0KorumaValidationError {
    non_empty_string_validation: Option<NonEmptyStringValidation>,
}
impl Username0KorumaValidationError {
    #[doc = concat!(
        "Returns the failed `", "NonEmptyStringValidation", "` validator, if any."
    )]
    pub fn non_empty_string_validation(&self) -> Option<&NonEmptyStringValidation> {
        self.non_empty_string_validation.as_ref()
    }
    #[doc = concat!("Returns all failed validators for `", "_0", "`.")]
    pub fn all(&self) -> impl Iterator<Item = Username0KorumaValidatorRef<'_>> + '_ {
        [
            self
                .non_empty_string_validation
                .as_ref()
                .map(Username0KorumaValidatorRef::NonEmptyStringValidation),
        ]
            .into_iter()
            .flatten()
    }
    pub fn is_empty(&self) -> bool {
        self.non_empty_string_validation.is_none()
    }
    pub fn has_errors(&self) -> bool {
        !self.is_empty()
    }
}
#[doc = concat!(
    "Validation errors for [`", "Username",
    "`].\n\nContains per-field error structs for ", "field: `_0`", "."
)]
#[derive(Debug, Default)]
pub struct UsernameKorumaValidationError {
    _0: Username0KorumaValidationError,
}
impl UsernameKorumaValidationError {
    #[doc = concat!(
        "Returns validation errors for the `", "_0", "` field of [`", "Username", "`]."
    )]
    pub fn _0(&self) -> &Username0KorumaValidationError {
        &self._0
    }
}
impl ::koruma::ValidationError for UsernameKorumaValidationError {
    fn is_empty(&self) -> bool {
        self._0.is_empty()
    }
}
impl ::koruma::ValidationIssues for UsernameKorumaValidationError {
    fn issues(&self) -> ::std::vec::Vec<::koruma::ValidationIssue> {
        let mut __koruma_issues = ::std::vec::Vec::new();
        if self._0.non_empty_string_validation().is_some() {
            __koruma_issues
                .push(
                    ::koruma::ValidationIssue::field(
                        "_0",
                        ::core::any::type_name::<NonEmptyStringValidation>(),
                        None,
                        ::std::format!(
                            "validation failed for `{}`", "NonEmptyStringValidation"
                        ),
                        ::std::vec::Vec::new(),
                    ),
                );
        }
        __koruma_issues
    }
}
impl Username {
    #[doc = concat!(
        "Creates a new `", "Username",
        "` instance and validates it.\n\nReturns `Ok(instance)` if all validations pass, or `Err(error)` with the validation failures."
    )]
    pub fn try_new(_0: String) -> Result<Self, UsernameKorumaValidationError> {
        let instance = Self(_0);
        instance.validate()?;
        Ok(instance)
    }
    #[doc = concat!(
        "Validates all fields of `", "Username",
        "` and returns an error struct containing all validation failures."
    )]
    pub fn validate(&self) -> Result<(), UsernameKorumaValidationError> {
        let mut error = UsernameKorumaValidationError {
            _0: Username0KorumaValidationError {
                non_empty_string_validation: None,
            },
        };
        let mut has_error = false;
        let __field_value = &self.0;
        {
            let __koruma_builder = NonEmptyStringValidation::__koruma_builder();
            ::koruma::__private::assert_field_validator_ready::<
                _,
                String,
                NonEmptyStringValidation,
            >(&__koruma_builder);
            let validator = ::koruma::__private::BuildValidator::build_validator(
                ::koruma::__private::CaptureValueRef::capture_value_ref(
                    __koruma_builder,
                    __field_value,
                ),
            );
            if !<NonEmptyStringValidation as ::koruma::Validate<
                String,
            >>::validate(&validator, __field_value) {
                error._0.non_empty_string_validation = Some(validator);
                has_error = true;
            }
        }
        if has_error { Err(error) } else { Ok(()) }
    }
}
impl ::koruma::ValidateExt for Username {
    type Error = UsernameKorumaValidationError;
    fn validate(&self) -> Result<(), UsernameKorumaValidationError> {
        Self::validate(self)
    }
}
impl ::koruma::__private::KorumaWasDerived for Username {}
