crates/koruma-derive/src/tests/snapshots/koruma_derive__tests__snapshot_tests__koruma_expansion_validator_no_args.snap
---
source: crates/koruma-derive/src/tests/snapshot_tests/koruma.rs
expression: pretty_print(expanded)
---
#[doc = concat!(
    "Validators for the `", "value", "` field of [`", "Item", "`]: [`",
    "EvenNumberValidation", "`]."
)]
#[derive(Clone, Copy, Debug)]
#[allow(dead_code)]
pub enum ItemValueKorumaValidatorRef<'koruma> {
    EvenNumberValidation(&'koruma EvenNumberValidation),
}
#[doc = concat!(
    "Validation errors for the `", "value", "` field of [`", "Item",
    "`].\n\nValidators: [`", "EvenNumberValidation", "`]."
)]
#[derive(Debug, Default)]
pub struct ItemValueKorumaValidationError {
    even_number_validation: Option<EvenNumberValidation>,
}
impl ItemValueKorumaValidationError {
    #[doc = concat!(
        "Returns the failed `", "EvenNumberValidation", "` validator, if any."
    )]
    pub fn even_number_validation(&self) -> Option<&EvenNumberValidation> {
        self.even_number_validation.as_ref()
    }
    #[doc = concat!("Returns all failed validators for `", "value", "`.")]
    pub fn all(&self) -> impl Iterator<Item = ItemValueKorumaValidatorRef<'_>> + '_ {
        [
            self
                .even_number_validation
                .as_ref()
                .map(ItemValueKorumaValidatorRef::EvenNumberValidation),
        ]
            .into_iter()
            .flatten()
    }
    pub fn is_empty(&self) -> bool {
        self.even_number_validation.is_none()
    }
    pub fn has_errors(&self) -> bool {
        !self.is_empty()
    }
}
#[doc = concat!(
    "Validation errors for [`", "Item", "`].\n\nContains per-field error structs for ",
    "field: `value`", "."
)]
#[derive(Debug, Default)]
pub struct ItemKorumaValidationError {
    value: ItemValueKorumaValidationError,
}
impl ItemKorumaValidationError {
    #[doc = concat!(
        "Returns validation errors for the `", "value", "` field of [`", "Item", "`]."
    )]
    pub fn value(&self) -> &ItemValueKorumaValidationError {
        &self.value
    }
}
impl ::koruma::ValidationError for ItemKorumaValidationError {
    fn is_empty(&self) -> bool {
        self.value.is_empty()
    }
}
impl ::koruma::ValidationIssues for ItemKorumaValidationError {
    fn issues(&self) -> ::std::vec::Vec<::koruma::ValidationIssue> {
        let mut __koruma_issues = ::std::vec::Vec::new();
        if self.value.even_number_validation().is_some() {
            __koruma_issues
                .push(
                    ::koruma::ValidationIssue::field(
                        "value",
                        ::core::any::type_name::<EvenNumberValidation>(),
                        None,
                        ::std::format!(
                            "validation failed for `{}`", "EvenNumberValidation"
                        ),
                        ::std::vec::Vec::new(),
                    ),
                );
        }
        __koruma_issues
    }
}
impl Item {
    #[doc = concat!(
        "Validates all fields of `", "Item",
        "` and returns an error struct containing all validation failures."
    )]
    pub fn validate(&self) -> Result<(), ItemKorumaValidationError> {
        let mut error = ItemKorumaValidationError {
            value: ItemValueKorumaValidationError {
                even_number_validation: None,
            },
        };
        let mut has_error = false;
        let __field_value = &self.value;
        {
            let __koruma_builder = EvenNumberValidation::__koruma_builder();
            ::koruma::__private::assert_field_validator_ready::<
                _,
                i32,
                EvenNumberValidation,
            >(&__koruma_builder);
            let validator = ::koruma::__private::BuildValidator::build_validator(
                ::koruma::__private::CaptureValueRef::capture_value_ref(
                    __koruma_builder,
                    __field_value,
                ),
            );
            if !<EvenNumberValidation as ::koruma::Validate<
                i32,
            >>::validate(&validator, __field_value) {
                error.value.even_number_validation = Some(validator);
                has_error = true;
            }
        }
        if has_error { Err(error) } else { Ok(()) }
    }
}
impl ::koruma::ValidateExt for Item {
    type Error = ItemKorumaValidationError;
    fn validate(&self) -> Result<(), ItemKorumaValidationError> {
        Self::validate(self)
    }
}
impl ::koruma::__private::KorumaWasDerived for Item {}
